<resources>
    <string name="app_name">Insurance Premium Calculator</string>
    <string name="age">Age</string>
    <string-array name="ageGroup">
        <item>Under 17</item>
        <item>17 \- 25</item>
        <item>26 \- 30</item>
        <item>31 \- 40</item>
        <item>41 \- 55</item>
        <item>More than 55</item>
    </string-array>
    <string name="gender">Gender (male or female)</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="smoker">Smoker or non-smoker</string>
    <string name="isSmoker">Smoker</string>
    <string name="notSmoker">Non-smoker</string>
    <string name="premium">Premium (RM)</string>
    <string name="extraMale">Extra payment for male</string>
    <string name="extraSmoker">Extra payment for smoker</string>
    <string name="total">Total</string>
</resources>
